--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
       # 1. コードをチェックアウト
       - name: Checkout repository
         uses: actions/checkout@v3
+        run: ls -R
 
       # 2. Node.js をセットアップ
       - name: Setup Node.js
