--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,27 +16,30 @@ jobs:
       # 1. コードをチェックアウト
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      # 2. ファイル一覧を表示
+      - name: List files
         run: ls -R
 
-      # 2. Node.js をセットアップ
+      # 3. Node.js をセットアップ
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
 
-      # 3. 依存関係をインストール
+      # 4. 依存関係をインストール
       - name: Install dependencies
         run: npm install
 
-      # 4. Gatsby をビルド
+      # 5. Gatsby をビルド
       - name: Build Gatsby site
         run: npm run build
 
-      # 5. Netlify CLI をインストール
+      # 6. Netlify CLI をインストール
       - name: Install Netlify CLI
         run: npm install -g netlify-cli
 
-      # 6. Netlify にデプロイ
+      # 7. Netlify にデプロイ
       - name: Deploy to Netlify
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
