--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "sass": "^1.85.1"
+    "react-slick": "^0.30.3",
+    "sass": "^1.85.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "gatsby-plugin-netlify": "^5.1.1",
