--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
 name: Build and Deploy to Netlify
 
 on:
-  push:
+  push: # mainブランチへのpushトリガーを有効に戻す
     branches:
       - main
+  repository_dispatch: # 外部イベントを受け取るトリガー
+    types: [microcms_update] # microCMSからのWebhookで指定するevent_type
 
 jobs:
   build:
