--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "gatsby": "^5.14.1",
+    "gatsby": "^5.14.3",
     "gatsby-adapter-netlify": "^1.2.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
@@ -50,6 +50,8 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "overrides": {
-    "cookie": "^0.7.1"
+    "cookie": "^0.7.1",
+    "path-to-regexp": "^6.2.2",
+    "postcss": "^8.4.31"
   }
 }
